<resources>
    <string name="app_name">Loan Application</string>
    <string name="sign_in">"Sing In "</string>
    <string name="sign_up">"Sing Up "</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="invalid_username">Not a valid Email-ID</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_mobile">Please Enter Valid Mobile Number</string>
    <string name="invalid_confirm_password">Password and Confirm Password must be same</string>
    <string name="dont_have_account_sign_up">Don\'t Have Account Sign Up</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="loan_history">Loan Histoy</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_duration">Enter Duration</string>
    <string name="sync_contacts">Sync Contacts</string>
    <string name="sync_messages">Sync Messages</string>
    <string name="sync_photos_calls">Sync Photos</string>
    <string name="sync_calls">Sync Call Logs</string>
    <string name="update_profile">Update Profile</string>
    <string name="noLoanHistory">No Loan History Found</string>
</resources>